; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_resolve_ref_unsafe.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_resolve_ref_unsafe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @resolve_ref_unsafe(i8* %0, i32 %1, %struct.object_id* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.object_id* %2, %struct.object_id** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* @the_repository, align 4
  %10 = call i32 @get_main_ref_store(i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.object_id*, %struct.object_id** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = call i8* @refs_resolve_ref_unsafe(i32 %10, i8* %11, i32 %12, %struct.object_id* %13, i32* %14)
  ret i8* %15
}

declare dso_local i8* @refs_resolve_ref_unsafe(i32, i8*, i32, %struct.object_id*, i32*) #1

declare dso_local i32 @get_main_ref_store(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
